--- a/style.css
+++ b/style.css
@@ -81,44 +81,20 @@ body{
     line-height: 1.4rem;
 }
 
-.social__links ul .portfolio:hover{
-    background: #6ec4fa;
-}
-
-.social__links ul .youtube:hover{
-    background:#FF0000;
-}
-
-.social__links ul .discord:hover{
-    background:#738adb;
-}
-
-.social__links ul .facebook:hover{
-    background:#3b5998;
-}
-
 .social__links ul .instagram:hover{
-    background: #fd5949;
-}
-
-.social__links ul .twitter:hover{
-    background: #1da1f2;
-}
-
-.social__links ul .twitch:hover{
-    background: #6441a5;
+    background: linear-gradient(#c13584,#833ab4);
 }
 
 .social__links ul .tiktok:hover{
-    background: #010101;
+    background: linear-gradient(#25F4EE,#fe2c55);
 }
 
-.social__links ul .github:hover{
-    background: #333;
-} 
+.social__links ul .ngl:hover{
+    background: linear-gradient(#fe2c55,#ffe066);
+}
 
-.social__links ul .project:hover{
-    background: #6ec4fa;
+.social__links ul .spotify:hover{
+    background: #1db954;
 }
 
 @media only screen and (max-width: 549px) {
